[package]
name = "shvbroker"
version = "3.14.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
entra-id = ["dep:async-compat", "dep:reqwest"]

[dev-dependencies]
cargo-run-bin = "1.7.4"
assert_cmd = "2.0"
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs.git", tag = "0.13.2", features = ["smol"] }
tempfile = "3"
const_format = "0.2.35"
anyhow = "1.0.100"
rcgen = "0.14.5"

[package.metadata.bin]
shvcall = { git = "https://github.com/silicon-heaven/shvcall-rs.git", branch = "master", version = "^3.9" }

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"

[dependencies]
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs.git", tag = "3.6.2", features = [ "serde" ] }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs.git", tag = "3.12.0", features = ["websocket", "can"] }
smol = "2"
smol-timeout = "0.6"
futures = "0.3.30"
log = "0.4.21"
simple_logger = { version = "5.0.0", features = ["stderr"] }
duration-str = "0.17"
rand = "0.9.0"
url = "2.5"
serde = "1.0.203"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.4.12", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.20", features = ["json", "http2", "rustls-tls"], default-features = false, optional = true }
serialport = "4.7.1"
async-tungstenite = "0.29.1"
async-compat = { version = "0.2.4", optional = true }
socketcan = { version = "3.5.0", features = ["smol"] }
futures-rustls = "0.26.0"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.1"

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
#[patch."https://github.com/silicon-heaven/libshvrpc-rs"]
#shvrpc = { path = "../libshvrpc-rs" }
[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }

[[bin]]
name = "shvbroker"

[[bin]]
name = "shvbroker_migrate_legacy"

[[test]]
name = "test_broker"
path = "tests/test_broker.rs"

[[test]]
name = "ssl"
path = "tests/ssl.rs"
