[package]
name = "shvbroker"
description = "Rust implementation of the SHV broker"
license = "MIT"
repository = "https://github.com/silicon-heaven/shvbroker-rs"
version = "3.23.1"
edition = "2024"
default-run = "shvbroker"

[package.metadata.bin]
shvcall = { version = "^3.9.0" }

[features]
google-auth = ["dep:jsonwebtoken", "dep:reqwest", "dep:async-compat"]
entra-id = ["dep:async-compat", "dep:reqwest"]
can = ["dep:socketcan", "shvrpc/can"]

[dev-dependencies]
cargo-run-bin = "1.7.4"
assert_cmd = "2.1"
shvclient = { version = "0.27.0", features = ["smol"] }
tempfile = "3"
const_format = "0.2.35"
anyhow = "1.0.101"
rcgen = "0.14.7"
async-trait = "0.1.89"

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"

[dependencies]
shvproto = { version = "6.0.1", features = [ "serde" ] }
shvrpc = { version = "11.0.0", features = ["websocket"] }
smol = "2"
smol-timeout = "0.6"
futures = "0.3.30"
log = "0.4.21"
simple_logger = { version = "5.0.0", features = ["stderr"] }
duration-str = "0.19"
rand = "0.10.0"
url = "2.5"
serde = "1.0.203"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5.57", features = ["derive"] }
async-sqlite = { version = "0.5.6", features = ["bundled", "modern-full"] }
reqwest = { version = "0.12.28", features = ["json", "http2", "rustls-tls"], default-features = false, optional = true }
serialport = "4.7.1"
async-tungstenite = "0.32.1"
async-compat = { version = "0.2.4", optional = true }
socketcan = { version = "3.5.0", features = ["smol"], optional = true }
futures-rustls = "0.26.0"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.1"
smol-macros = "0.1.1"
ipnet = { version = "2.11.0", features = ["serde"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "8.0.0", optional = true }

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
#[patch."https://github.com/silicon-heaven/libshvrpc-rs"]
#shvrpc = { path = "../libshvrpc-rs" }
[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }

[[bin]]
name = "shvbroker"

[[bin]]
name = "shvbroker_migrate_legacy"

[[test]]
name = "test_broker"
path = "tests/test_broker.rs"

[[test]]
name = "ssl"
path = "tests/ssl.rs"
