[package]
name = "shvbroker"
description = "Rust implementation of the SHV broker"
license = "MIT"
repository = "https://github.com/silicon-heaven/shvbroker-rs"
version = "3.31.10"
edition = "2024"
default-run = "shvbroker"

[package.metadata.bin]
shvcall = { version = "=3.11.27" }

[features]
google-auth = ["dep:jsonwebtoken", "dep:reqwest", "dep:async-compat"]
entra-id = ["dep:async-compat", "dep:reqwest"]
can = ["dep:socketcan", "shvrpc/can"]

[dev-dependencies]
cargo-run-bin = "1.7.4"
assert_cmd = "2.2"
shvclient = { version = "8.0.1", features = ["smol"] }
tempfile = "3"
const_format = "0.2.36"
anyhow = "1.0.102"
rcgen = "0.14.8"
async-trait = "0.1.89"

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"

[dependencies]
shvproto = { version = "6.2.0", features = [ "serde" ] }
shvrpc = { version = "18.0.0", features = ["websocket"] }
smol = "2"
smol-timeout = "0.6"
futures = "0.3.32"
log = "0.4.32"
simple_logger = { version = "5.0.0", features = ["stderr"] }
duration-str = "0.21"
rand = "0.10.1"
url = "2.5"
serde = "1.0.203"
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
async-sqlite = { version = "0.6.0", features = ["bundled", "modern-full"] }
reqwest = { version = "0.12.28", features = ["json", "http2", "rustls-tls"], default-features = false, optional = true }
serialport = { version = "4.7.1", default-features = false }
async-tungstenite = "0.34.1"
async-compat = { version = "0.2.4", optional = true }
socketcan = { version = "3.5.0", features = ["smol"], optional = true }
futures-rustls = "0.26.0"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.7.0"
smol-macros = "0.1.1"
ipnet = { version = "2.12.0", features = ["serde"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"], optional = true }
uuid = { version = "1.23.2", features = ["v4"] }

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
#[patch."https://github.com/silicon-heaven/libshvrpc-rs"]
#shvrpc = { path = "../libshvrpc-rs" }
[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }

[[bin]]
name = "shvbroker"

[[bin]]
name = "shvbroker_migrate_legacy"

[[test]]
name = "test_broker"
path = "tests/test_broker.rs"

[[test]]
name = "ssl"
path = "tests/ssl.rs"

[lints.clippy]
pedantic = {priority = -1, level = "warn"}

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
box_collection = "warn"
dbg_macro = "warn"
enum_variant_names = "warn"
equatable_if_let = "warn"
exit = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
iter_on_single_items = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
linkedlist = "warn"
map_err_ignore = "warn"
needless_pass_by_ref_mut = "warn"
option-if-let-else = "warn"
option_option = "warn"
or_fun_call = "warn"
owned_cow = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_allocation = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
string_lit_as_bytes = "warn"
string_slice = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_box_returns = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unused_self = "warn"
unwrap_used = "warn"
upper_case_acronyms = "warn"
useless_let_if_seq = "warn"
vec_box = "warn"
wrong_self_convention = "warn"

doc_markdown = "allow"
expect_used = "allow"
explicit_iter_loop = "allow"
float-cmp = "allow"
format_push_string = "allow"
if_not_else = "allow"
items_after_statements = "allow"
inconsistent_struct_constructor = "allow"
large_futures = "allow"
manual_string_new = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
should_panic_without_expect = "allow"
struct_excessive_bools = "allow"
todo = "allow"
too_many_lines = "allow"
